--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@ngxs-labs/dispatch-decorator": "^5.0.0",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
+    "browser-image-compression": "^2.0.2",
+    "jalali-moment": "^3.3.11",
     "jqwidgets-ng": "^16.0.2",
+    "password-validator": "^5.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
