--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.2.0",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
+    "bootstrap": "^5.3.0",
     "browser-image-compression": "^2.0.2",
     "jalali-moment": "^3.3.11",
     "jqwidgets-ng": "^16.0.2",
