--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "bootstrap": "^5.3.0",
     "browser-image-compression": "^2.0.2",
     "jalali-moment": "^3.3.11",
+    "jalali-ts": "^2.0.5",
     "jqwidgets-ng": "^16.0.2",
+    "ng-persian-datepicker": "^6.1.0",
     "password-validator": "^5.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
