--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "@ngxs/router-plugin": "^3.8.1",
     "@ngxs-labs/dispatch-decorator": "^4.0.2",
+    "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
     "bootstrap": "^5.3.0",
     "browser-image-compression": "^2.0.2",
     "jalali-moment": "^3.3.11",
     "jalali-ts": "^2.0.5",
     "jqwidgets-ng": "^16.0.2",
+    "ng-otp-input": "^1.9.2",
     "ng-persian-datepicker": "^6.1.0",
     "password-validator": "^5.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "ngx-countdown": "^13.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.11",
