--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -29,13 +30,13 @@
     "jqwidgets-ng": "^16.0.2",
     "ng-otp-input": "^1.9.2",
     "ng-persian-datepicker": "^6.1.0",
+    "ngx-countdown": "^13.0.0",
     "password-validator": "^5.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "ngx-countdown": "^13.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.11",
