--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@ngxs-labs/dispatch-decorator": "^4.0.2",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
+    "ag-grid-angular": "^30.0.6",
+    "ag-grid-community": "^30.0.6",
+    "ag-grid-enterprise": "^30.0.6",
     "bootstrap": "^5.3.0",
     "browser-image-compression": "^2.0.2",
     "jalali-moment": "^3.3.11",
