--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng-otp-input": "^1.9.2",
     "ng-persian-datepicker": "^6.1.0",
     "ngx-countdown": "^13.0.0",
+    "ngx-ui-loader": "^13.0.0",
     "password-validator": "^5.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
