--- a/package.json
+++ b/package.json
@@ -26,16 +26,15 @@
     "ag-grid-angular": "^30.0.6",
     "ag-grid-community": "^30.0.6",
     "ag-grid-enterprise": "^30.0.6",
-    "bootstrap": "^5.3.0",
     "browser-image-compression": "^2.0.2",
     "jalali-moment": "^3.3.11",
     "jalali-ts": "^2.0.5",
-    "jqwidgets-ng": "^16.0.2",
     "ng-otp-input": "^1.9.2",
     "ng-persian-datepicker": "^6.1.0",
     "ngx-countdown": "^13.0.0",
     "ngx-ui-loader": "^13.0.0",
     "password-validator": "^5.3.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
     "rxjs": "~7.5.0",
