--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@angular/service-worker": "^14.2.0",
     "@ngxs-labs/dispatch-decorator": "^4.0.2",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
