--- a/angular.json
+++ b/angular.json
@@ -12,6 +12,17 @@
         },
         "@schematics/angular:guard": {
           "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true,
+          "standalone": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true,
+          "standalone": true
         }
       },
       "root": "",
