--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ng-otp-input": "^1.9.2",
     "ng-persian-datepicker": "^6.1.0",
     "ngx-countdown": "^13.0.0",
+    "ngx-image-cropper": "^7.1.2",
     "ngx-spinner": "^15.0.1",
     "password-validator": "^5.3.0",
     "primeflex": "^3.3.1",
